--- a/src/components/FiltersPersonage.astro
+++ b/src/components/FiltersPersonage.astro
@@ -22,7 +22,7 @@ const statusOptions = infoFilter.status;
 
 <article class="w-full max-w-4xl mx-auto p-4">
   <div class="flex flex-col gap-6">
-    <header class="flex items-center justify-between">
+    <header class="flex items-center justify-between flex-wrap">
       <h2 class="text-xl font-bold mb-4 text-white flex items-center gap-2">
         <FilterIcon class="w-5 h-5 text-primary" />
         Filtros
@@ -37,7 +37,7 @@ const statusOptions = infoFilter.status;
         </button>
         <ButtonPrimary id="clear-filters">
           <RefreshIcon class="w-4 h-4" />
-          Limpiar Filtros
+          <span>Limpiar Filtros</span>
         </ButtonPrimary>
       </div>
     </header>
@@ -58,14 +58,14 @@ const statusOptions = infoFilter.status;
           <select id="species-filter" class="select-custom w-full">
             <option
               value="all"
-              class="bg-bg-card text-text-primary p-3 rounded-lg font-medium transition-all option-custom options"
+              class="bg-bg-card text-text-primary p-3 rounded-lg font-medium transition-all option-custom options truncate"
               >Todas las especies</option
             >
             {
               speciesOptions.map((specie: any) => (
                 <option
                   value={specie.toLowerCase()}
-                  class="text-text-primary p-3 rounded-lg font-medium transition-all option-custom hover:bg-option-hover-bg bg-bg-card options"
+                  class="text-text-primary p-3 rounded-lg font-medium transition-all option-custom hover:bg-option-hover-bg bg-bg-card options truncate"
                 >
                   {specie}
                 </option>
